# fastapi_mecab

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py  mecabrc.ipadic  mecabrc.neologd
app/routers/mecab/: logic.py  schema.py
server/: start-reload.sh
