[tool.poetry]
name = "fastapi-mecab"
version = "0.1.0"
description = ""
authors = ["Kei198403 <74121135+Kei198403@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# MeCabはインストール済みの前提
#mecab-python3 = "^1.0.6"
# CaboChaはインストール済みの前提
#cabocha-python = "^0.69"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mypy = "^1.4.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
ipykernel = "^6.23.2"
git-changelog = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
